Tue Aug 19 19:06:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Don't use cmd to send commands through telnet. The disadvantage
          of the cmd method is that it only returns when the prompt
          appears again. When this doesn't happen we don't get the output
          of the last command into our build log or on the telnet client

Tue Aug 19 14:01:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
        * ace/OS_NS_stdlib.inl:
        * ace/config-win32-msvc.h:
          CodeGear C++ Builder 2009 has wcstoull and strtoull

Mon Aug 18 11:30:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-borland.h:
          CodeGear C++ Builder 2009 doesn't support inline assembly

Mon Aug 18 10:17:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Improved BCB instructions

Sun Aug 17 18:04:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * include/makeinclude/compiler.bor:
          Added BCBVER 10/11/12

Sun Aug 17 07:30:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mwc.pl:
        * bin/mpc.pl:
          Use RealBin to get the location of this script, that gives the
          real location also in case we use a symbolic link to these
          scripts. Thanks to Adam Mitz for pointing me to RealBin

Fri Aug 15 11:07:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * make/makeinclude/platform_aix_ibm.GNU:
          Added missing AIX compiler version 0800.

Wed Aug 13 14:40:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h:
          Added missing specializations for Borland C++.

Wed Aug 13 14:18:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/ace_defines.m4:
        * m4/ace_functions.m4:
        * m4/ace_headers.m4: